Build menu page

--- a/ui/css/components/meal.css
+++ b/ui/css/components/meal.css
@@ -34,7 +34,7 @@
 
 .c-variety__meal:hover {
 	box-shadow: var(--shadow-lg);
-	cursor: pointer;
+	/*cursor: pointer;*/
 }
 
 .c-variety__meal-image {
