Build meal options page

--- a/ui/css/components/form.css
+++ b/ui/css/components/form.css
@@ -1,5 +1,6 @@
 .c-form-group {
 	margin-bottom: var(--spacing-5);
+	width: 100%;
 }
 
 .c-form-group__label {
@@ -10,6 +11,7 @@
 }
 
 .c-form-group__input {
+	width: 100%;
 	display: block;
 	height: 45px;
 	padding: 0 var(--spacing-4);
@@ -37,6 +39,7 @@
 }
 
 .c-input-group .c-form-group__input {
+	width: 100%;
 	outline: none;
 	flex: 7;
 	box-shadow: none;
